--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<!DOCTYPE
+<!DOCTYPE html>
+<html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="whidth"=device-width, initial-scale="1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Em busca da cidade perdida </title>
+    </head>
+<body>
+    <main>
+        <div class="passo ativo" id="passo-0">
+<img src="img/cenario-passo0.png" alt="">
+<p
+        </div>
+ 
+    </main>
+</html>
+     
